Added social media links.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
     Page under construction, please be patient :)
     <br>
     - hoodiemoder
+    <br>
+    <br>
+    <a href="https://github.com/hoodiemoder">GitHub</a>
+    <br>
+    <a href="https://twitter.com/hoodiemoder">Twitter</a>
+    <br>
+    <a href="https://youtube.com/@hoodiemoder">YouTube</a>
+    <br>
     </body>
 </html>
