Modified index.html for black and white theme.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
     <head>
         <style>
             * {
+                color: white;
                 font-family: monospace, monospace;
                 }
+            body {
+                background-color: black;
+            }
         </style>
     </head>
     <body>
