--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <style>
-            * {
-                color: white;
-                font-family: monospace, monospace;
-                }
-            body {
-                background-color: black;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
     Page under construction, please be patient :)
