--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-    Page under construction, please be patient :)
-    <br>
-    - hoodiemoder
-    <br>
-    <br>
-    <a href="https://github.com/hoodiemoder">GitHub</a>
-    <br>
-    <a href="https://twitter.com/hoodiemoder">Twitter</a>
-    <br>
-    <a href="https://youtube.com/@hoodiemoder">YouTube</a>
-    <br>
+        <img src="img/light-brown-hoodiemoder.svg">
+        <br>
+        Page under construction, please be patient :)
+        <br>
+        - hoodiemoder
+        <br>
+        <br>
+        <a href="https://github.com/hoodiemoder">GitHub</a>
+        <br>
+        <a href="https://twitter.com/hoodiemoder">Twitter</a>
+        <br>
+        <a href="https://youtube.com/@hoodiemoder">YouTube</a>
+        <br>
     </body>
 </html>
