Updated YouTube channel link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <br>
         <a href="https://twitter.com/hoodiemoder">Twitter</a>
         <br>
-        <a href="https://youtube.com/@hoodiemoder">YouTube</a>
+        <a href="https://www.youtube.com/channel/UCL59eFDcNtEdWdxwnbPO-Bg">YouTube</a>
         <br>
     </body>
 </html>
