Centered content with divs

--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <img src="img/light-brown-hoodiemoder.svg">
-        <br>
-        Page under construction, please be patient :)
-        <br>
-        - hoodiemoder
-        <br>
-        <br>
-        <a href="https://github.com/hoodiemoder">GitHub</a>
-        <br>
-        <a href="https://twitter.com/hoodiemoder">Twitter</a>
-        <br>
-        <a href="https://www.youtube.com/channel/UCL59eFDcNtEdWdxwnbPO-Bg">YouTube</a>
-        <br>
+        <div align="center">
+            <img src="img/light-brown-hoodiemoder.svg">
+            <br>
+            Page under construction, please be patient :)
+            <br>
+            - hoodiemoder
+        </div>
+        <div align="center">
+            <br>
+            <br>
+            <a href="https://github.com/hoodiemoder">GitHub</a>
+            <br>
+            <a href="https://twitter.com/hoodiemoder">Twitter</a>
+            <br>
+            <a href="https://www.youtube.com/channel/UCL59eFDcNtEdWdxwnbPO-Bg">YouTube</a>
+            <br>
+        </div>
     </body>
 </html>
