--- a/index.html
+++ b/index.html
@@ -5,21 +5,13 @@
     </head>
     <body>
         <div align="center">
-            <img src="img/light-brown-hoodiemoder.svg">
-            <br>
-            Page under construction, please be patient :)
-            <br>
-            - hoodiemoder
+            <img src="img/light-brown-hoodiemoder.svg" alt="hoodiemoder">
+            <p>Page under construction, please be patient :)</p>
         </div>
         <div align="center">
-            <br>
-            <br>
-            <a href="https://github.com/hoodiemoder">GitHub</a>
-            <br>
-            <a href="https://twitter.com/hoodiemoder">Twitter</a>
-            <br>
-            <a href="https://www.youtube.com/channel/UCL59eFDcNtEdWdxwnbPO-Bg">YouTube</a>
-            <br>
+            <a href="https://github.com/hoodiemoder"><img src="img/github-icon.svg" height="64px"></a>
+            <a href="https://twitter.com/hoodiemoder"><img src="img/twitter-icon.svg" height="64px"></a>
+            <a href="https://www.youtube.com/@hoodiemoder"><img src="img/youtube-icon.png" height="64px"></a>
         </div>
     </body>
 </html>
