Removed under construction text, formatted anchor links

--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <body>
         <div align="center">
             <img src="img/light-brown-hoodiemoder.svg" alt="hoodiemoder">
-            <p>Page under construction, please be patient :)</p>
         </div>
         <div align="center">
-            <a href="https://github.com/hoodiemoder"><img src="img/github-icon.svg" height="64px"></a>
-            <a href="https://twitter.com/hoodiemoder"><img src="img/twitter-icon.svg" height="64px"></a>
-            <a href="https://www.youtube.com/@hoodiemoder"><img src="img/youtube-icon.png" height="64px"></a>
+            <a href="https://github.com/hoodiemoder">
+                 <img src="img/github-icon.svg" height="64px">
+            </a>
+            <a href="https://twitter.com/hoodiemoder">
+                <img src="img/twitter-icon.svg" height="64px">
+            </a>
+            <a href="https://www.youtube.com/@hoodiemoder">
+                <img src="img/youtube-icon.png" height="64px">
+            </a>
         </div>
     </body>
 </html>
