Removed whitespace between icons

--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
         </div>
         <div align="center">
             <a href="https://github.com/hoodiemoder">
-                 <img src="img/github-icon.svg" height="64px">
-            </a>
+                 <img src="img/github-icon.svg" height="64px"></a>
             <a href="https://twitter.com/hoodiemoder">
-                <img src="img/twitter-icon.svg" height="64px">
-            </a>
+                <img src="img/twitter-icon.svg" height="64px"></a>
             <a href="https://www.youtube.com/@hoodiemoder">
-                <img src="img/youtube-icon.png" height="64px">
-            </a>
+                <img src="img/youtube-icon.png" height="64px"></a>
         </div>
     </body>
 </html>
