--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/style.css">
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     </head>
     <body>
         <div align="center">
-            <img src="img/light-brown-hoodiemoder.svg" alt="hoodiemoder">
+            <img src="img/light-brown-hoodiemoder.svg" width="32%">
         </div>
         <div align="center">
             <a href="https://github.com/hoodiemoder">
-                 <img src="img/github-icon.svg" height="64px"></a>
+                 <img src="img/github-icon.svg" width="4%"></a>
             <a href="https://twitter.com/hoodiemoder">
-                <img src="img/twitter-icon.svg" height="64px"></a>
+                <img src="img/twitter-icon.svg" width="4%"></a>
             <a href="https://www.youtube.com/@hoodiemoder">
-                <img src="img/youtube-icon.png" height="64px"></a>
+                <img src="img/youtube-icon.png" width="4%"></a>
         </div>
     </body>
 </html>
