--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     </head>
     <body>
         <div align="center">
-            <img src="img/light-brown-hoodiemoder.svg" width="32%">
+            <img src="img/light-brown-hoodiemoder.svg" height="512/600%">
         </div>
         <div align="center">
             <a href="https://github.com/hoodiemoder">
-                 <img src="img/github-icon.svg" width="4%"></a>
+                 <img src="img/github-icon.svg" height="64/600%"></a>
             <a href="https://twitter.com/hoodiemoder">
-                <img src="img/twitter-icon.svg" width="4%"></a>
+                <img src="img/twitter-icon.svg" height="64/600%"></a>
             <a href="https://www.youtube.com/@hoodiemoder">
-                <img src="img/youtube-icon.png" width="4%"></a>
+                <img src="img/youtube-icon.png" height="64/600%"></a>
         </div>
     </body>
 </html>
