--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div align="center">
-            <img src="img/light-brown-hoodiemoder.svg" height="512/600%">
+            <img src="img/icon-h.svg" height="512/600%">
         </div>
         <div align="center">
             <a href="https://github.com/hoodiemoder">
