--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <meta name="msapplication-TileColor" content="#9f00a7">
+        <meta name="theme-color" content="#ffffff">
     </head>
     <body>
         <div align="center">
-            <img src="img/icon-h-circle.svg" height="512/600%">
+            <img src="img/h-cirlcle-icon.svg" height="512/600%">
         </div>
         <div align="center">
             <a href="https://github.com/hoodiemoder">
@@ -14,7 +21,7 @@
             <a href="https://twitter.com/hoodiemoder">
                 <img src="img/twitter-icon.svg" height="64/600%"></a>
             <a href="https://www.youtube.com/@hoodiemoder">
-                <img src="img/youtube-icon.png" height="64/600%"></a>
+                <img src="img/youtube-icon.svg" height="64/600%"></a>
         </div>
     </body>
 </html>
