Centered monero address and icon

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
             <a href="https://www.youtube.com/@hoodiemoder">
                 <img src="img/youtube-icon.svg" height="64/600%"></a>
         </div>
-        <div>
-            <img src="img/monero-icon.svg" height="16/600%">
-            <p>896Sk1BYYSdYap7fNXMAdN6tkMWneiw8YEqRSjKJYnms1ujqipKZkCbGX1qBnuNCU4ZWZLQSd6UZ1A5DG4YdraMNAw3EvaU</p>
+        <br>
+        <div align="center">
+           <img src="img/monero-icon.svg" height="16/600%">
+           896Sk1BYYSdYap7fNXMAdN6tkMWneiw8YEqRSjKJYnms1ujqipKZkCbGX1qBnuNCU4ZWZLQSd6UZ1A5DG4YdraMNAw3EvaU
         </div>
     </body>
 </html>
